--- a/web-app/src/main/resources/templates/clients.html
+++ b/web-app/src/main/resources/templates/clients.html
@@ -153,6 +153,7 @@
 
 <div id="exportModalData" class="modal-export-data" style="display: none;">
     <div class="modal-export-data-content">
+        <span id="close-export-modal" class="close">&times;</span>
         <h3>Виберіть поля для експорту</h3>
         <form id="exportFieldsForm">
             <label><input type="checkbox" name="fields" value="id" checked> Id</label>
@@ -163,7 +164,6 @@
 
         </form>
         <button id="exportConfirm" class="btn btn-primary">Експортувати</button>
-        <button id="exportCancel" class="btn btn-secondary">Скасування</button>
     </div>
 </div>
 
