--- a/web-app/src/main/resources/templates/containers.html
+++ b/web-app/src/main/resources/templates/containers.html
@@ -151,6 +151,7 @@
 
 <div id="exportModalData" class="modal-export-data" style="display: none;">
     <div class="modal-export-data-content">
+        <span id="close-export-modal" class="close">&times;</span>
         <h3>Виберіть поля для експорту</h3>
         <form id="exportFieldsForm">
             <div class="export-fields-section">
@@ -170,7 +171,6 @@
             </div>
         </form>
         <button id="exportConfirm" class="btn btn-primary">Експортувати</button>
-        <button id="exportCancel" class="btn btn-secondary">Скасування</button>
     </div>
 </div>
 
